bugfix: allow navbar to be toggled on smaller screensizes

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -31,6 +31,10 @@
   overflow-y: scroll;
 }
 
+.WelcomeNav {
+  z-index: 1000 !important;
+}
+
 /* Remove scrollable component on larger screens */
 @media (min-width: 992px) {
   .Container {
